@@ -1,3 +1,8 @@
+2003-12-29  Dave Morrison  <dmrrsn@users.sourceforge.net>
+
+	* postinstall.pl.in:  Write the new mirror choices to the config file
+	at the end of the process! (oops)
+
 2003-12-28  Dave Morrison  <dmrrsn@users.sourceforge.net>
 
 	* VERSION: Releasing version 0.0.3 of fink-mirrors
